Fixes highlighting cancel button and alignment issue

--- a/src/components/contextualactionpanel/_contextualactionpanel.scss
+++ b/src/components/contextualactionpanel/_contextualactionpanel.scss
@@ -26,7 +26,8 @@
   }
 
   .flex-toolbar {
-    margin: 0 16px;
+    margin: 0 auto;
+    padding: 0 16px;
   }
 
   .toolbar {
